--- a/pet/src/main/resources/templates/mypage/sitterprofile.html
+++ b/pet/src/main/resources/templates/mypage/sitterprofile.html
@@ -62,7 +62,7 @@
                             </ul>
                         </div>
                         <div class="photo">
-                            <img th:src="@{/asset/sitter2.jpg}" alt="시터 이미지"/>
+                            <img th:src="'/images/'+${img}" th:if="${img} != null" alt="시터 이미지"/>
                             <div class="clear">
                                 <ul>
                                     <li>
@@ -112,7 +112,7 @@
                                 <div class="pr">
                                     <ul>
                                         <li>자기소개 :</li>
-                                        <li>안녕하세요! 저는 반려동물과 함께하는 시간을 진심으로 사랑하는 LEE입니다. 어릴 적부터 다양한 반려동물과 함께 자라면서 동물들의 감정과 건강에
+                                        <input>안녕하세요! 저는 반려동물과 함께하는 시간을 진심으로 사랑하는 LEE입니다. 어릴 적부터 다양한 반려동물과 함께 자라면서 동물들의 감정과 건강에
                                             대해 깊은 관심을 가져왔고, 그 경험을 바탕으로 OOO에서 신뢰받는 펫시터가 되고자 합니다.
 
                                             저는 강아지 산책, 돌봄, 방문 케어 등 반려견의 일상에서 꼭 필요한 서비스들을 꼼꼼하고 세심하게 제공하고 있습니다. 반려견의 성격과 건강
@@ -126,7 +126,7 @@
                                             저에게 맡겨 주신 소중한 반려견이 가족처럼 안전하고 행복한 시간을 보낼 수 있도록 최선을 다하겠습니다. 믿고 맡겨 주세요!
 
                                             감사합니다.
-                                        </li>
+                                        </input>
 
                                     </ul>
                                 </div>
