2025-06-05 / 헤더부분 이메일 -> 사용자이름 변경 완료, 결제 시 유저 이메일 전화번호등 로그인된 유저 정보 가져오기 완료 / db에 값 삽입필요 , 게시판 및 회원가입 디테일 수정 필요

--- a/pet/src/main/resources/templates/layout/header.html
+++ b/pet/src/main/resources/templates/layout/header.html
@@ -32,7 +32,7 @@
         </div>
         <div class="signed-box" sec:authorize="isAuthenticated()">
             <div class="username-box">
-                <span th:text="${#authentication.name}"></span>
+                <span th:text="${#authentication.principal.name}"></span>
                 <span>님 안녕하세요!</span>
             </div>
             <div class="btn-box">
