--- a/pet/src/main/resources/templates/reserve/reserve.html
+++ b/pet/src/main/resources/templates/reserve/reserve.html
@@ -165,6 +165,9 @@
             </div>
         </div>
         <div class="reservation-info">
+            <input type="hidden" id="buyerEmail" th:value="${email}">
+            <input type="hidden" id="buyerTel" th:value="${phone}">
+            <input type="hidden" id="buyerName" th:value="${name}">
             <h3>예약 정보</h3>
             <div class="location">
                 <div class="info-line">
