--- a/pet/src/main/resources/templates/mypage/ownerprofile.html
+++ b/pet/src/main/resources/templates/mypage/ownerprofile.html
@@ -64,14 +64,14 @@
                     <form th:action="@{/update/owner/{userId}(userId=${user.userId})}" method="post"
                           enctype="multipart/form-data">
                         <div class="photo">
-                            <img src="">
+                            <!-- <img th:src="@{${user.profileImageUrl}}" alt="프로필 이미지" /> -->
                             <div class="clear">
                                 <ul>
                                     <li>
-                                        <a href="">사진 변경</a>
-                                    </li>
-                                    <li>
-                                        <a href="">변경 완료</a>
+                                        <label>
+                                            사진 변경:
+                                            <input type="file" name="profileImage"/>
+                                        </label>
                                     </li>
                                 </ul>
                             </div>
@@ -81,44 +81,24 @@
                                 <div class="na-cng">
                                     <ul>
                                         <li>보호자 이름 :</li>
-                                        <li>박박박</li>
+                                        <li><input type="text" name="name" th:value="${user.name}"/></li>
                                     </ul>
                                 </div>
                                 <div class="loca">
                                     <ul>
                                         <li>주소 :</li>
-                                        <li>대구 남구 중앙대로20길</li>
+                                        <li><input type="text" name="address" th:value="${user.address}"/></li>
                                     </ul>
                                 </div>
                                 <div class="numb">
                                     <ul>
                                         <li>전화번호 :</li>
-                                        <li>010-1111-1234</li>
-                                    </ul>
-                                </div>
-                                <div class="pr">
-                                    <ul>
-                                        <li>반려동물 이름 :</li>
-                                        <li>모과</li>
-                                        <li>견종 :</li>
-                                        <li>코카스파니엘</li>
-                                        <li>나이 :</li>
-                                        <li>3살</li>
-                                        <li>특징</li>
-                                        <li>
-                                            쾌활하며 활동적인 성격,
-                                            관심을 많이 받는 것을 좋아하며, 지속적인 애정을 받고 싶어 합니다.
-                                            운동량이 많아 산책을 하루에 2,3번 이상 나가는 것을 좋아합니다.
-                                        </li>
-                                        <li>주의사항</li>
-                                        <li>
-                                            하고 싶은 것이 있으면 짖음이 좀 있는 편 -> 짖을 때 주의 주세요!
-                                        </li>
+                                        <li><input type="text" name="phone" th:value="${user.phone}"/></li>
                                     </ul>
                                 </div>
                                 <ul>
                                     <li class="ad">
-                                        <a href="">수정</a>
+                                        <button type="submit">변경 완료</button>
                                     </li>
                                 </ul>
                             </div>
