pet entity 완료, 예약 / 결제 처리중

--- a/pet/src/main/resources/static/css/ownerpage.css
+++ b/pet/src/main/resources/static/css/ownerpage.css
@@ -867,3 +867,32 @@ button {
 
     margin: 13px 7px 15px 11px;
 }
+
+.pro-card {
+  display: flex;
+  align-items: center;
+  margin-top: 10px;
+  gap: 10px;
+}
+
+.pro-card img {
+  width: 80px;
+  height: 80px;
+  border-radius: 10px;
+  object-fit: cover;
+}
+
+.pro-card ul {
+  list-style: none;
+  padding: 0;
+}
+
+.pro-card button {
+  margin-left: auto;
+  background-color: #f44;
+  color: white;
+  border: none;
+  padding: 5px 10px;
+  cursor: pointer;
+  border-radius: 5px;
+}
