--- a/pet/src/main/resources/templates/modal/reservemodal.html
+++ b/pet/src/main/resources/templates/modal/reservemodal.html
@@ -28,63 +28,63 @@
                     <p class="paragraph">강아지의 불안감이 해소된 이후, 강아지에 대한 평가와 보호자님의 고민을 함께 나누며 교육을 진행합니다.</p>
                     <p class="paragraph">교육 시, 보호자의 습관 개선 고민, 보호자님과 강아지가 처한 환경과 생활, 보호자님의 생각 등을 함께 나누며 실질적이고 보호자님의 생활에 적용 가능한 방식으로 교육이 진행될 수 있도록 지속적으로 피드백 드리겠습니다.</p>
                 </div>
-                <div class="id">
-                    <div class="slider__btn">
-                        <span class="prev" title="이전이미지">prev</span>
-                    </div>
-                    <div class="sitter-review">
-                        <div class="slider-track">
-                            <div class="sitter-review-img">
-                                <img src="#" alt="" class="sitter-small-img">
-                            </div>
-                            <div class="sitter-review-img">
-                                <img src="#" alt="" class="sitter-small-img">
-                            </div>
-                            <div class="sitter-review-img">
-                                <img src="#" alt="" class="sitter-small-img">
-                            </div>
-                            <div class="sitter-review-img">
-                                <img src="#" alt="" class="sitter-small-img">
-                            </div>
-                            <div class="sitter-review-img">
-                                <img src="#" alt="" class="sitter-small-img">
-                            </div>
-                            <div class="sitter-review-img">
-                                <img src="#" alt="" class="sitter-small-img">
-                            </div>
-                            <div class="sitter-review-img">
-                                <img src="#" alt="" class="sitter-small-img">
-                            </div>
-                            <div class="sitter-review-img">
-                                <img src="#" alt="" class="sitter-small-img">
-                            </div>
-                            <div class="sitter-review-img">
-                                <img src="#" alt="" class="sitter-small-img">
-                            </div>
-                            <div class="sitter-review-img">
-                                <img src="#" alt="" class="sitter-small-img">
-                            </div>
-                            <div class="sitter-review-img">
-                                <img src="#" alt="" class="sitter-small-img">
-                            </div>
-                            <div class="sitter-review-img">
-                                <img src="#" alt="" class="sitter-small-img">
-                            </div>
-                            <div class="sitter-review-img">
-                                <img src="#" alt="" class="sitter-small-img">
-                            </div>
-                            <div class="sitter-review-img">
-                                <img src="#" alt="" class="sitter-small-img">
-                            </div>
-                            <div class="sitter-review-img">
-                                <img src="#" alt="" class="sitter-small-img">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="slider__btn">
-                        <span href="#" class="next" title="다음이미지">next</span>
-                    </div>
-                </div>
+<!--                <div class="id">-->
+<!--                    <div class="slider__btn">-->
+<!--                        <span class="prev" title="이전이미지">prev</span>-->
+<!--                    </div>-->
+<!--                    <div class="sitter-review">-->
+<!--                        <div class="slider-track">-->
+<!--                            <div class="sitter-review-img">-->
+<!--                                <img src="#" alt="" class="sitter-small-img">-->
+<!--                            </div>-->
+<!--                            <div class="sitter-review-img">-->
+<!--                                <img src="#" alt="" class="sitter-small-img">-->
+<!--                            </div>-->
+<!--                            <div class="sitter-review-img">-->
+<!--                                <img src="#" alt="" class="sitter-small-img">-->
+<!--                            </div>-->
+<!--                            <div class="sitter-review-img">-->
+<!--                                <img src="#" alt="" class="sitter-small-img">-->
+<!--                            </div>-->
+<!--                            <div class="sitter-review-img">-->
+<!--                                <img src="#" alt="" class="sitter-small-img">-->
+<!--                            </div>-->
+<!--                            <div class="sitter-review-img">-->
+<!--                                <img src="#" alt="" class="sitter-small-img">-->
+<!--                            </div>-->
+<!--                            <div class="sitter-review-img">-->
+<!--                                <img src="#" alt="" class="sitter-small-img">-->
+<!--                            </div>-->
+<!--                            <div class="sitter-review-img">-->
+<!--                                <img src="#" alt="" class="sitter-small-img">-->
+<!--                            </div>-->
+<!--                            <div class="sitter-review-img">-->
+<!--                                <img src="#" alt="" class="sitter-small-img">-->
+<!--                            </div>-->
+<!--                            <div class="sitter-review-img">-->
+<!--                                <img src="#" alt="" class="sitter-small-img">-->
+<!--                            </div>-->
+<!--                            <div class="sitter-review-img">-->
+<!--                                <img src="#" alt="" class="sitter-small-img">-->
+<!--                            </div>-->
+<!--                            <div class="sitter-review-img">-->
+<!--                                <img src="#" alt="" class="sitter-small-img">-->
+<!--                            </div>-->
+<!--                            <div class="sitter-review-img">-->
+<!--                                <img src="#" alt="" class="sitter-small-img">-->
+<!--                            </div>-->
+<!--                            <div class="sitter-review-img">-->
+<!--                                <img src="#" alt="" class="sitter-small-img">-->
+<!--                            </div>-->
+<!--                            <div class="sitter-review-img">-->
+<!--                                <img src="#" alt="" class="sitter-small-img">-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                    <div class="slider__btn">-->
+<!--                        <span href="#" class="next" title="다음이미지">next</span>-->
+<!--                    </div>-->
+<!--                </div>-->
             </div>
         </div>
         <button class="reserve-btn2">예약하기</button>
