2025-06-09 / 소셜가입시 pet_sitter,pet_owner에 값이 안들어가는 부분 수정완료, 로그인시 owner sitter 구분 일부 완료(소셜로그인시 구분해야함)

--- a/pet/src/main/resources/templates/sign/signup.html
+++ b/pet/src/main/resources/templates/sign/signup.html
@@ -12,7 +12,7 @@
 
 <!-- css -->
 <th:block layout:fragment="css">
-    <link rel="stylesheet" href="/css/sign.css">
+    <link rel="stylesheet" href="/css/sign.css?after">
 </th:block>
 
 <!-- script -->
