--- a/pet/src/main/resources/static/css/sign.css
+++ b/pet/src/main/resources/static/css/sign.css
@@ -323,3 +323,10 @@ input[name="role"] {
     transition: all 0.3s;
 }
 
+/* 에러메세지 */
+.err-msg {
+    position: relative;
+    margin: 10px 0 20px 0;
+    font-size: 1.2rem;
+}
+
