--- a/pet/src/main/resources/templates/layout/loginForm.html
+++ b/pet/src/main/resources/templates/layout/loginForm.html
@@ -15,8 +15,8 @@
             <input name="password" required type="password">
             <label>Password</label>
         </div>
-        <div th:if="${session.loginErrorMessage}">
-            <p style="color:red;" th:text="${session.loginErrorMessage}"></p>
+        <div th:if="${loginErrorMessage}" class="err-msg">
+            <p style="color:red;" th:text="${loginErrorMessage}"></p>
         </div>
         <input class="btn" id="loginBtn" type="submit" value="login">
         <div class="fg_pw">
