--- a/pet/src/main/resources/templates/mypage/ownerpage.html
+++ b/pet/src/main/resources/templates/mypage/ownerpage.html
@@ -115,15 +115,15 @@
                     <div th:each="reserve:${reservations}" class="resev-page" data-page="1">
                         <div class="res-card">
                             <ul>
-                                <li class="type" th:text="reserve.serviceType"></li>
-                                <li class="status" th:text="reserve.status"></li>
+                                <li class="type" th:text="sitterReservations.serviceType"></li>
+                                <li class="status" th:text="sitterReservations.status"></li>
                             </ul>
                             <div class="schedule">
                     <span class="material-symbols-outlined">calendar_today</span>
-                                <span th:text="${reserve.date}"></span>
+                                <span th:text="${sitterReservations.date}"></span>
                             </div>
-                            <div class="sit" th:text="${sitter.user.name} + '시터'"></div>
-                            <div class="price" th:text="${reserve.payment}">120,000원</div>
+                            <div class="sit" th:text="${sitterReservations.sitter.user.name} + '시터'"></div>
+                            <div class="price" th:text="${sitterReservations.payment}">120,000원</div>
                             <div class="actions">
                                 <button class="openChatBtn">채팅</button>
                                 <button class="modal-btn" data-type="view1">상세보기</button>
@@ -266,25 +266,25 @@
 <!--                        </div>-->
 <!--                    </div>-->
                     <!-- 페이지네이션 -->
-                    <div class="allres">
-                        <button th:if="${currentPage > 0}" th:onclick="location.href=\'items?page=' + ${currentPage -1} + '\'">
-                            <span class="left material-symbols-outlined">chevron_left</span>
-                        </button>
-                        <ul class="number">
-                            <li th:each="i : ${#numbers.sequence(0,totalPages -1)}">
-                                <button class="page-btn" th:text="${i + 1}"
-                                th:classappend="${i == currentPage ? 'active' : ''}"
-                                th:onclick="location.href=\'items?page=' + ${i} + '\'"></button>
-                            </li>
+<!--                    <div class="allres">-->
+<!--                        <button th:if="${currentPage > 0}" th:onclick="location.href=\'items?page=' + ${currentPage -1} + '\'">-->
+<!--                            <span class="left material-symbols-outlined">chevron_left</span>-->
+<!--                        </button>-->
+<!--                        <ul class="number">-->
+<!--                            <li th:each="i : ${#numbers.sequence(0,totalPages -1)}">-->
+<!--                                <button class="page-btn" th:text="${i + 1}"-->
+<!--                                th:classappend="${i == currentPage ? 'active' : ''}"-->
+<!--                                th:onclick="location.href=\'items?page=' + ${i} + '\'"></button>-->
+<!--                            </li>-->
 <!--                            <li><button class="page-btn">2</button></li>-->
 <!--                            <li><button class="page-btn">3</button></li>-->
-<!--                            <li><button class="page-btn">4</button></li>-->
-                        </ul>
-                        <button th:if="$currentPage < totalPages -1}" th:onclick="lacation.href=\'items?page=' + ${currentPage +1} + '\'">
-                            <span class="right material-symbols-outlined">chevron_right</span>
-                        </button>
-                    </div>
-                </div>
+<!--&lt;!&ndash;                            <li><button class="page-btn">4</button></li>&ndash;&gt;-->
+<!--                        </ul>-->
+<!--                        <button th:if="$currentPage < totalPages -1}" th:onclick="lacation.href=\'items?page=' + ${currentPage +1} + '\'">-->
+<!--                            <span class="right material-symbols-outlined">chevron_right</span>-->
+<!--                        </button>-->
+<!--                    </div>-->
+<!--                </div>-->
                 <!-- chart3 -->
                 <div class="all-pro">
                     <div class="profil">
@@ -319,15 +319,23 @@
                                 <li>최근에 이용한 펫시터 목록입니다.</li>
                             </ul>
                         </div>
-                        <div class="sit-name1">
-                            <img src="../../asset/sitter1.jpg" />
-                            <ul>
-                                <span th:text="'이름' + ${sitter.user.name}"></span>
-                                <span class="material-symbols-outlined" style="font-size: 18px">star</span>
-                                <span>4.8점</span>
-                                <span th:text="reserve.serviceType">산책</span>
-                                <span th:text="reserve.date">2025-03-14 이용</span>
-                            </ul>
+<!--                        <div class="sit-name1">-->
+<!--                            <img src="../../asset/sitter1.jpg" />-->
+<!--                            <ul>-->
+<!--                                <span th:text="'이름' + ${sitter.user.name}"></span>-->
+<!--                                <span class="material-symbols-outlined" style="font-size: 18px">star</span>-->
+<!--                                <span>4.8점</span>-->
+<!--                                <span th:text="reserve.serviceType">산책</span>-->
+<!--                                <span th:text="reserve.date">2025-03-14 이용</span>-->
+<!--                            </ul>-->
+                        <div th:each="res : ${reservations}">
+                            <div class="reservation-item">
+                                <span th:if="${sitterReservations.sitter != null}" th:text="'이름 : ' + ${sitterReservations.sitter.user.name}"></span><br>
+                                <span th:text="'서비스 : ' + ${sitterReservations.serviceType}"></span><br>
+                                <span th:text="'날짜 : ' + ${sitterReservations.date}"></span>
+<!--                                <span th:text="'날짜: ' + ${#temporals.format(res.dateTime, 'yyyy-MM-dd HH:mm')}"></span>-->
+                            </div>
+                        </div>
                             <div class="chat1">
                                 <!-- 모달 버튼 -->
                                 <button class="openChatBtn" data-sitter="sitter3">
