--- a/pet/src/main/resources/templates/mypage/ownerpage.html
+++ b/pet/src/main/resources/templates/mypage/ownerpage.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <!-- link -->
     <script src="/js/link.js" defer></script>
     <title>Document</title>
     <!-- css -->
-    <link th:href="@{/css/style.css}" rel="stylesheet" />
-    <link th:href="@{/css/header.css}" rel="stylesheet" />
-    <link th:href="@{/css/footer.css}" rel="stylesheet" />
-    <link th:href="@{/css/ownerpage.css}" rel="stylesheet" />
+    <link th:href="@{/css/style.css}" rel="stylesheet"/>
+    <link th:href="@{/css/header.css}" rel="stylesheet"/>
+    <link th:href="@{/css/footer.css}" rel="stylesheet"/>
+    <link th:href="@{/css/ownerpage.css}" rel="stylesheet"/>
     <!-- JS -->
     <script th:src="@{/js/ownerpage.js}" defer></script>
     <script th:inline="javascript">
@@ -63,7 +63,7 @@
                 <!-- chart1 -->
                 <div class="produce">
                     <div class="name">
-                        <img src="/asset/dog1.jpg" />
+                        <img src="/asset/dog1.jpg"/>
                         <span th:text="'안녕하세요,' + ${owner.user.name} + '님!'"></span>
                         <ul>
                             <li>오늘도 반려견과 행복한 하루 되세요</li>
@@ -73,19 +73,19 @@
                 <span class="material-symbols-outlined" style="font-size: 15px">
                   pets
                 </span>
-<!--                        <span th:text="반려동물"></span>-->
+                        <span>반려동물 : 2마리</span>
                     </div>
                     <div class="review">
                 <span class="material-symbols-outlined" style="font-size: 16px">
                   star
                 </span>
-<!--                        <span th:text="작성한 리뷰"></span>-->
+                        <span>작성한 리뷰 : 6건</span>
                     </div>
                     <div class="reserving">
                 <span class="material-symbols-outlined" style="font-size: 15px">
                   calendar_today
                 </span>
-<!--                        <span th:text="진행중인 예약"></span>-->
+                        <span>진행중인 예약 : 3건</span>
                     </div>
                     <div class="payment-amount">
                 <span class="material-symbols-outlined" style="font-size: 15px">
@@ -115,176 +115,40 @@
                     <div th:each="reserve:${reservations}" class="resev-page" data-page="1">
                         <div class="res-card">
                             <ul>
-                                <li class="type" th:text="sitterReservations.serviceType"></li>
-                                <li class="status" th:text="sitterReservations.status"></li>
+                                <span class="type" th:text="${reserve.serviceType}"></span>
+                                <span class="status" th:text="${reserve.status}"></span>
                             </ul>
                             <div class="schedule">
-                    <span class="material-symbols-outlined">calendar_today</span>
-                                <span th:text="${sitterReservations.date}"></span>
+                                <span class="material-symbols-outlined">calendar_today</span>
+                                <span th:text="${reserve.date}"></span>
                             </div>
-                            <div class="sit" th:text="${sitterReservations.sitter.user.name} + '시터'"></div>
-                            <div class="price" th:text="${sitterReservations.payment}">120,000원</div>
+                            <div class="sit" th:text="${reserve.sitter.user.name} + '시터'"></div>
+                            <div class="price" th:text="${reserve.payment}">120,000원</div>
                             <div class="actions">
                                 <button class="openChatBtn">채팅</button>
                                 <button class="modal-btn" data-type="view1">상세보기</button>
                             </div>
                         </div>
-<!--                        <div class="res-card">-->
-<!--                            <ul>-->
-<!--                                <li class="type">산책</li>-->
-<!--                                <li class="status">예약 확정</li>-->
-<!--                            </ul>-->
-<!--                            <div class="schedule">-->
-<!--                    <span class="material-symbols-outlined"-->
-<!--                    >calendar_today</span-->
-<!--                    >-->
-<!--                                <span>2025-06-01</span>-->
-<!--                            </div>-->
-<!--                            <div class="sit">OOO시터</div>-->
-<!--                            <div class="price">25,000원</div>-->
-<!--                            <div class="actions">-->
-<!--                                <button class="openChatBtn">채팅</button>-->
-<!--                                <button class="modal-btn" data-type="view2">상세보기</button>-->
-<!--                            </div>-->
-<!--                        </div>-->
-<!--                    </div>-->
-<!--                    &lt;!&ndash; 페이지 2 &ndash;&gt;-->
-<!--                    <div class="resev-page" data-page="2">-->
-<!--                        <div class="res-card">-->
-<!--                            <ul>-->
-<!--                                <li class="type">호텔링</li>-->
-<!--                                <li class="status">예약 대기</li>-->
-<!--                            </ul>-->
-<!--                            <div class="schedule">-->
-<!--                    <span class="material-symbols-outlined"-->
-<!--                    >calendar_today</span-->
-<!--                    >-->
-<!--                                <span>2025-06-10 ~ 2025-06-13</span>-->
-<!--                            </div>-->
-<!--                            <div class="sit">OOO시터</div>-->
-<!--                            <div class="price">150,000원</div>-->
-<!--                            <div class="actions">-->
-<!--                                <button class="openChatBtn">채팅</button>-->
-<!--                                <button class="modal-btn">상세보기</button>-->
-<!--                            </div>-->
-<!--                        </div>-->
-<!--                        <div class="res-card">-->
-<!--                            <ul>-->
-<!--                                <li class="type">산책</li>-->
-<!--                                <li class="status">예약 완료</li>-->
-<!--                            </ul>-->
-<!--                            <div class="schedule">-->
-<!--                    <span class="material-symbols-outlined"-->
-<!--                    >calendar_today</span-->
-<!--                    >-->
-<!--                                <span>2025-07-01</span>-->
-<!--                            </div>-->
-<!--                            <div class="sit">OOO시터</div>-->
-<!--                            <div class="price">30,000원</div>-->
-<!--                            <div class="actions">-->
-<!--                                <button class="openChatBtn">채팅</button>-->
-<!--                                <button class="modal-btn">상세보기</button>-->
-<!--                            </div>-->
-<!--                        </div>-->
-<!--                    </div>-->
-<!--                    &lt;!&ndash; 페이지 3 &ndash;&gt;-->
-<!--                    <div class="resev-page" data-page="3">-->
-<!--                        <div class="res-card">-->
-<!--                            <ul>-->
-<!--                                <li class="type">호텔링</li>-->
-<!--                                <li class="status">예약 취소</li>-->
-<!--                            </ul>-->
-<!--                            <div class="schedule">-->
-<!--                    <span class="material-symbols-outlined"-->
-<!--                    >calendar_today</span-->
-<!--                    >-->
-<!--                                <span>2025-07-15 ~ 2025-07-17</span>-->
-<!--                            </div>-->
-<!--                            <div class="sit">OOO시터</div>-->
-<!--                            <div class="price">0원</div>-->
-<!--                            <div class="actions">-->
-<!--                                <button class="openChatBtn">채팅</button>-->
-<!--                                <button class="modal-btn">상세보기</button>-->
-<!--                            </div>-->
-<!--                        </div>-->
-<!--                        <div class="res-card">-->
-<!--                            <ul>-->
-<!--                                <li class="type">산책</li>-->
-<!--                                <li class="status">예약 확정</li>-->
-<!--                            </ul>-->
-<!--                            <div class="schedule">-->
-<!--                    <span class="material-symbols-outlined"-->
-<!--                    >calendar_today</span-->
-<!--                    >-->
-<!--                                <span>2025-08-01</span>-->
-<!--                            </div>-->
-<!--                            <div class="sit">OOO시터</div>-->
-<!--                            <div class="price">28,000원</div>-->
-<!--                            <div class="actions">-->
-<!--                                <button class="openChatBtn">채팅</button>-->
-<!--                                <button class="modal-btn">상세보기</button>-->
-<!--                            </div>-->
-<!--                        </div>-->
-<!--                    </div>-->
-<!--                    &lt;!&ndash; 페이지 4 &ndash;&gt;-->
-<!--                    <div class="resev-page" data-page="4">-->
-<!--                        <div class="res-card">-->
-<!--                            <ul>-->
-<!--                                <li class="type">호텔링</li>-->
-<!--                                <li class="status">이용 완료</li>-->
-<!--                            </ul>-->
-<!--                            <div class="schedule">-->
-<!--                    <span class="material-symbols-outlined"-->
-<!--                    >calendar_today</span-->
-<!--                    >-->
-<!--                                <span>2025-08-10 ~ 2025-08-13</span>-->
-<!--                            </div>-->
-<!--                            <div class="sit">OOO시터</div>-->
-<!--                            <div class="price">170,000원</div>-->
-<!--                            <div class="actions">-->
-<!--                                <button class="openChatBtn">채팅</button>-->
-<!--                                <button class="modal-btn">상세보기</button>-->
-<!--                            </div>-->
-<!--                        </div>-->
-<!--                        <div class="res-card">-->
-<!--                            <ul>-->
-<!--                                <li class="type">산책</li>-->
-<!--                                <li class="status">예약 확정</li>-->
-<!--                            </ul>-->
-<!--                            <div class="schedule">-->
-<!--                    <span class="material-symbols-outlined"-->
-<!--                    >calendar_today</span-->
-<!--                    >-->
-<!--                                <span>2025-08-15</span>-->
-<!--                            </div>-->
-<!--                            <div class="sit">OOO시터</div>-->
-<!--                            <div class="price">26,000원</div>-->
-<!--                            <div class="actions">-->
-<!--                                <button class="openChatBtn">채팅</button>-->
-<!--                                <button class="modal-btn">상세보기</button>-->
-<!--                            </div>-->
-<!--                        </div>-->
-<!--                    </div>-->
-                    <!-- 페이지네이션 -->
-<!--                    <div class="allres">-->
-<!--                        <button th:if="${currentPage > 0}" th:onclick="location.href=\'items?page=' + ${currentPage -1} + '\'">-->
-<!--                            <span class="left material-symbols-outlined">chevron_left</span>-->
-<!--                        </button>-->
-<!--                        <ul class="number">-->
-<!--                            <li th:each="i : ${#numbers.sequence(0,totalPages -1)}">-->
-<!--                                <button class="page-btn" th:text="${i + 1}"-->
-<!--                                th:classappend="${i == currentPage ? 'active' : ''}"-->
-<!--                                th:onclick="location.href=\'items?page=' + ${i} + '\'"></button>-->
-<!--                            </li>-->
-<!--                            <li><button class="page-btn">2</button></li>-->
-<!--                            <li><button class="page-btn">3</button></li>-->
-<!--&lt;!&ndash;                            <li><button class="page-btn">4</button></li>&ndash;&gt;-->
-<!--                        </ul>-->
-<!--                        <button th:if="$currentPage < totalPages -1}" th:onclick="lacation.href=\'items?page=' + ${currentPage +1} + '\'">-->
-<!--                            <span class="right material-symbols-outlined">chevron_right</span>-->
-<!--                        </button>-->
-<!--                    </div>-->
-<!--                </div>-->
+                        <!-- 페이지네이션 -->
+                        <div class="allres">
+                            <button th:if="${currentPage > 0}"
+                                    th:onclick="location.href=\'items?page=' + ${currentPage -1} + '\'">
+                                <span class="left material-symbols-outlined">chevron_left</span>
+                            </button>
+                            <ul class="number">
+                                <div th:each="pageNum : ${#numbers.sequence(0, totalPages != null ? totalPages - 1 : 0)}">
+                                    <button class="page-btn" th:text="${pageNum + 1}"
+                                            th:classappend="${pageNum == currentPage ? 'active' : ''}"
+                                            th:onclick="location.href='items?page=' + ${pageNum}"></button>
+                                </div>
+                            </ul>
+                            <button th:if="${totalPages != null and currentPage < totalPages -1}"
+                                    th:onclick="location.href=\'items?page=' + ${currentPage +1} + '\'">
+                                <span class="right material-symbols-outlined">chevron_right</span>
+                            </button>
+                        </div>
+                    </div>
+                </div>
                 <!-- chart3 -->
                 <div class="all-pro">
                     <div class="profil">
@@ -296,20 +160,6 @@
                             <div class="care">
                                 <button class="modal-btn" data-type="petInfo">관리</button>
                             </div>
-<!--                            <div class="pro1">-->
-<!--                                <img src="../../asset/dog1.jpg" alt="" />-->
-<!--                                <ul>-->
-<!--                                    <li>이름</li>-->
-<!--                                    <li>포메라니안 / 2세 / 3.5KG</li>-->
-<!--                                </ul>-->
-<!--                            </div>-->
-<!--                            <div class="pro2">-->
-<!--                                <img src="../../asset/dog1.jpg" alt="" />-->
-<!--                                <ul>-->
-<!--                                    <li>이름</li>-->
-<!--                                    <li>골든두들 / 4세 / 25KG</li>-->
-<!--                                </ul>-->
-<!--                            </div>-->
                         </div>
                     </div>
                     <div class="sitter">
@@ -319,51 +169,20 @@
                                 <li>최근에 이용한 펫시터 목록입니다.</li>
                             </ul>
                         </div>
-<!--                        <div class="sit-name1">-->
-<!--                            <img src="../../asset/sitter1.jpg" />-->
-<!--                            <ul>-->
-<!--                                <span th:text="'이름' + ${sitter.user.name}"></span>-->
-<!--                                <span class="material-symbols-outlined" style="font-size: 18px">star</span>-->
-<!--                                <span>4.8점</span>-->
-<!--                                <span th:text="reserve.serviceType">산책</span>-->
-<!--                                <span th:text="reserve.date">2025-03-14 이용</span>-->
-<!--                            </ul>-->
                         <div th:each="res : ${reservations}">
                             <div class="reservation-item">
-                                <span th:if="${sitterReservations.sitter != null}" th:text="'이름 : ' + ${sitterReservations.sitter.user.name}"></span><br>
-                                <span th:text="'서비스 : ' + ${sitterReservations.serviceType}"></span><br>
-                                <span th:text="'날짜 : ' + ${sitterReservations.date}"></span>
-<!--                                <span th:text="'날짜: ' + ${#temporals.format(res.dateTime, 'yyyy-MM-dd HH:mm')}"></span>-->
+                                <span th:if="${res.sitter != null}"
+                                      th:text="'이름 : ' + ${res.sitter.user.name}"></span><br>
+                                <span th:text="'서비스 : ' + ${res.serviceType}"></span><br>
+                                <span th:text="'날짜 : ' + ${res.date}"></span>
                             </div>
                         </div>
-                            <div class="chat1">
-                                <!-- 모달 버튼 -->
-                                <button class="openChatBtn" data-sitter="sitter3">
-                                    채팅
-                                </button>
-                            </div>
+                        <div class="chat1">
+                            <!-- 모달 버튼 -->
+                            <button class="openChatBtn" data-sitter="sitter3">
+                                채팅
+                            </button>
                         </div>
-<!--                        <div class="sit-name2">-->
-<!--                            <img src="../../asset/sitter1.jpg" alt="" />-->
-<!--                            <ul>-->
-<!--                                <li>이름</li>-->
-<!--                                <span-->
-<!--                                        class="material-symbols-outlined"-->
-<!--                                        style="font-size: 18px"-->
-<!--                                >-->
-<!--                      star-->
-<!--                    </span>-->
-<!--                                <li>3.9점</li>-->
-<!--                                <li>호텔링,산책</li>-->
-<!--                                <li>2025-04-19 이용</li>-->
-<!--                            </ul>-->
-<!--                            <div class="chat2">-->
-<!--                                &lt;!&ndash; 모달 버튼 &ndash;&gt;-->
-<!--                                <button class="openChatBtn" data-sitter="sitter4">-->
-<!--                                    채팅-->
-<!--                                </button>-->
-<!--                            </div>-->
-<!--                        </div>-->
                     </div>
                 </div>
             </div>
